--- a/scenes_inf443/02a_cpp_bases/CMakeLists.txt
+++ b/scenes_inf443/02a_cpp_bases/CMakeLists.txt
@@ -1,8 +1,8 @@
 # This is a generic CMake setup for CGP library use
 cmake_minimum_required(VERSION 3.8) 
-project(01_basic_cpp)
+project(cpp_bases)
 
-add_executable(01_basic_cpp src/main.cpp)
+add_executable(cpp_bases src/main.cpp)
 
 
 # Set Compiler for Unix system
@@ -17,9 +17,9 @@ endif()
 # Set Compiler for Windows/Visual Studio
 if(MSVC)
    set(CMAKE_CONFIGURATION_TYPES RelWithDebInfo ) # default build as RelWithDebInfo
-   set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT 01_basic_cpp ) # default project (avoids AllBuild)
-   set_target_properties( 01_basic_cpp PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}$<0:> ) # default output in root dir
-   set_target_properties( 01_basic_cpp PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} ) # default debug execution in root dir
+   set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT cpp_bases ) # default project (avoids AllBuild)
+   set_target_properties( cpp_bases PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}$<0:> ) # default output in root dir
+   set_target_properties( cpp_bases PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} ) # default debug execution in root dir
    
    # Avoids the warning /W3 overided by /W4 when using Ninja
    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
