--- a/scenes_inf443/03a_cpp_classes/a_classes/Makefile
+++ b/scenes_inf443/03a_cpp_classes/a_classes/Makefile
@@ -1,11 +1,11 @@
-all: 01_basic_cpp
+all: cpp_classes
 
-01_basic_cpp: main.o
-	g++ main.o -o 01_basic_cpp
+cpp_classes: main.o
+	g++ main.o -o cpp_classes
 
 main.o: src/main.cpp
 	g++ -c src/main.cpp -o main.o
 
 .PHONY: clean
 clean:
-	rm -f main.o 01_basic_cpp
+	rm -f main.o cpp_classes
